[gd_scene load_steps=5 format=2]

[ext_resource path="res://Attacks/Phase2/FerrisWheelAttack/ferriswheel_attack.gd" type="Script" id=1]
[ext_resource path="res://Border/Border.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/KinematicHeart.tscn" type="PackedScene" id=3]
[ext_resource path="res://Attacks/Phase2/FerrisWheelAttack/FerrisWheel/FerrisWheel.tscn" type="PackedScene" id=4]

[node name="FerrisWheelAttack" type="Node2D"]
script = ExtResource( 1 )

[node name="BorderField" parent="." instance=ExtResource( 2 )]
position = Vector2( 300, 800 )
scale = Vector2( 0.6, 0.6 )

[node name="KinematicHeart" parent="BorderField" instance=ExtResource( 3 )]
position = Vector2( -100, -91.6667 )
scale = Vector2( 2.27273, 2.27273 )

[node name="ClubTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="FerrisWheel" parent="." instance=ExtResource( 4 )]

[node name="BorderFollow" type="PathFollow2D" parent="FerrisWheel"]
position = Vector2( 0, -240 )
rotation = -0.123798

[node name="WheelCenter" type="Node2D" parent="FerrisWheel"]
position = Vector2( 0, -15.2195 )
scale = Vector2( 1.17073, 1.17073 )

[node name="HoldingTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="timeout" from="ClubTimer" to="." method="_on_ClubTimer_timeout"]
[connection signal="timeout" from="HoldingTimer" to="." method="_on_HoldingTimer_timeout"]
